--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE HTML>
+
+<html>
+    <head>
+        <title>Blue Jay herbs baby</title>
+    </head>
+    <body>
+    
+    <div>Welcome to Bluejay freakin herbs man yeah</div>
+    </body>
+</html>
