creating main site

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
         <title>Blue Jay herbs baby</title>
     </head>
     <body>
-    
-    <div>Welcome to Bluejay freakin herbs man yeah</div>
+
+    <ui-view></ui-view>
+
+    <!-- requirejs entry point -->
+    <script data-main='scripts/bootstrapper.js' src='bower_components/requirejs/require.js'></script>
     </body>
 </html>
