added gulp and sass to npm added bootstrap styles to index

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <title>Blue Jay herbs baby</title>
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     </head>
     <body>
 
