items are now being added to cart and cart returned

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <head>
         <title>Blue Jay herbs baby</title>
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="stylesheets/app.css">
     </head>
     <body>
 
