--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body ng-controller="MainCtrl">
-    <h1>This is bluejay herbs admin sign in page</h1>
+    admin index
     
      <ui-view></ui-view>
      
